[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/images/ui/windowcommon/ToolTipbg.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/DS_12.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/images/ui/windowcommon/230.png" type="Texture" id=4]
[ext_resource path="res://src/scripts/UI/toolTip/ToolTipSkill.gd" type="Script" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 202, 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 202, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 202, 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 202, 1 )

[node name="ToolTipSkill" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -608.0
margin_bottom = -406.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="bg"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="bg/MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 186.0
margin_bottom = 214.0
mouse_filter = 2
custom_constants/separation = 0

[node name="NameLabel" type="Label" parent="bg/MarginContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.968627, 0.839216, 0.352941, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "上挑 Lv 100"

[node name="Name2Label" type="Label" parent="bg/MarginContainer/VBoxContainer"]
margin_top = 13.0
margin_right = 180.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.298039, 0.572549, 0.92549, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "上挑 Lv 100"

[node name="HSeparator" type="HSeparator" parent="bg/MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 180.0
margin_bottom = 39.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 13

[node name="MPLabel" type="Label" parent="bg/MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 180.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "MP 6"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="bg/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 180.0
margin_bottom = 65.0
mouse_filter = 2

[node name="CastTime" type="Label" parent="bg/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 106.0
margin_bottom = 13.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "施法时间:0.7秒"

[node name="CoolTime" type="Label" parent="bg/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 110.0
margin_right = 180.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "冷却时间:2秒"

[node name="Consume" type="Label" parent="bg/MarginContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 180.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.298039, 0.572549, 0.92549, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "[无色小晶块]1个"

[node name="Operate" type="Label" parent="bg/MarginContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 180.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "操作指令 :z"

[node name="HSeparator2" type="HSeparator" parent="bg/MarginContainer/VBoxContainer"]
margin_top = 91.0
margin_right = 180.0
margin_bottom = 104.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 13

[node name="LevelProperty" type="Label" parent="bg/MarginContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 180.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
text = "物理攻击力：120% + 41
浮空力比率：100%"

[node name="HSeparator4" type="HSeparator" parent="bg/MarginContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 180.0
margin_bottom = 143.0
custom_styles/separator = SubResource( 3 )
custom_constants/separation = 13

[node name="Explain" type="Label" parent="bg/MarginContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 180.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
text = "    向敌人发出从下段往上挑的攻击， 可以浮空敌人； 攻击时有霸体判定。"
autowrap = true

[node name="HSeparator5" type="HSeparator" parent="bg/MarginContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 180.0
margin_bottom = 195.0
custom_styles/separator = SubResource( 4 )
custom_constants/separation = 13

[node name="LockTip" type="Label" parent="bg/MarginContainer/VBoxContainer"]
margin_top = 195.0
margin_right = 180.0
margin_bottom = 208.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
text = "锁定指令技能：点击右键"
align = 1

[connection signal="draw" from="bg/MarginContainer/VBoxContainer/LockTip" to="." method="_on_LockTip_draw"]
